--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "selco",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "tailwind.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "express": "^4.21.2",
+    "i": "^0.3.7",
+    "node-fetch": "^3.3.2",
+    "npm": "^11.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
