--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "selco",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "tailwind.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "express": "^4.21.2",
-    "i": "^0.3.7",
-    "node-fetch": "^3.3.2",
-    "npm": "^11.1.0",
-    "postcss": "^8.4.47"
-  },
-  "devDependencies": {
-    "axios": "^1.6.4",
-    "laravel-vite-plugin": "^1.0.0",
-    "vite": "^5.0.0",
-    "browser-sync": "^2.27.9",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "laravel-mix": "^6.0.6",
-    "tailwindcss": "^3.4.14"
-  }
+    "name": "selco",
+    "version": "1.0.0",
+    "description": "",
+    "main": "tailwind.config.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "autoprefixer": "^10.4.20",
+        "express": "^4.21.2",
+        "i": "^0.3.7",
+        "node-fetch": "^3.3.2",
+        "npm": "^11.1.0",
+        "postcss": "^8.4.47"
+    },
+    "devDependencies": {
+        "axios": "^1.6.4",
+        "laravel-vite-plugin": "^1.0.0",
+        "vite": "^5.0.0",
+        "browser-sync": "^2.27.9",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "laravel-mix": "^6.0.6",
+        "tailwindcss": "^3.4.14"
+    }
 }
