--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=15619dc87dd90fc2e958c6b3ce104e43",
+    "/css/app.css": "/css/app.css?id=e8819ee2db11586a06f1d942c02b32e8"
 }
